# mMass

./: .gitignore  README.md  build.py  known_issues.txt  mmass.py  pyproject.toml  readme.md  setup.py  todo.txt
calculations/: calculations.c
configs/: compounds.xml  config.xml  enzymes.xml  mascot.xml  modifications.xml  monomers.xml  presets.xml  references.xml
gui/: config.py  dlg_clipboard_editor.py  dlg_compounds_editor.py  dlg_enzymes_editor.py  dlg_error.py  dlg_mascot_editor.py  dlg_modifications_editor.py  dlg_monomers_editor.py  dlg_notation.py  dlg_preferences.py  dlg_presets_editor.py  dlg_references_editor.py  dlg_select_scans.py  dlg_select_sequences.py  doc.py  ids.py  images.py  images_lib_gtk.py  images_lib_mac.py  images_lib_msw.py  libs.py  main_frame.py  mwx.py  panel_about.py  panel_calibration.py  panel_compare_peaklists.py  panel_compounds_search.py  panel_document_export.py  panel_document_info.py  panel_documents.py  panel_envelope_fit.py  panel_mascot.py  panel_mass_calculator.py  panel_mass_defect_plot.py  panel_mass_filter.py  panel_mass_to_formula.py  panel_match.py  panel_monomer_library.py  panel_peak_differences.py  panel_peaklist.py  (+7 more)
mspy/: __init__.py  blocks.py  calculations.c  calculations.pyd  mixins.py  mod_basics.py  mod_calibration.py  mod_envfit.py  mod_formulator.py  mod_mascot.py  mod_pattern.py  mod_peakpicking.py  mod_proteo.py  mod_signal.py  mod_stopper.py  mod_utils.py  obj_compound.py  obj_peak.py  obj_peaklist.py  obj_scan.py  obj_sequence.py  parser_fasta.py  parser_mgf.py  parser_mzdata.py  parser_mzml.py  plot.py  (+5 more)
(+9 files in other folders)
